crates/schema/tests/compile_fail/builder_group_no_item_method.stderr
error[E0599]: no method named `item` found for struct `GroupBuilder` in the current scope
 --> tests/compile_fail/builder_group_no_item_method.rs:6:27
  |
6 |         .group("g", |g| g.item("x"))
  |                           ^^^^ method not found in `GroupBuilder`
